	4413 Hodremlin_Card		Small chance that for 10 seconds you gain 30 Perfect Dodge when attacked.
	4417 Ice_Titan_Card		Chance that for 10 seconds you'll gain 10 Armor Defence while taking magic or physical damage.
	4425 Atros_Card			Chance that for 10 seconds your aspd will increase by 100% while attacking.

========================
09/13
	* Rev. 11191 Added a few more items. (idRO RIC items, etc) [L0ne_W0lf]
	- RIC Stat Boost items will only last 1 minute until we have a proper time.
	- Some items give ONE item as the quantity given is unknown.
	- Corrected the view ID for "Scarf", "Little Angel Rock", "Robo Eye".
	  "Sakray Test Helm" and the "Loki Mask"
	- Commented out several headgear that are not standard in the kRO client.
	  5301, 5305 - 5322, 5324 and 5325. All i/id/c/p/e/RO event hats?
	* Updated Moonlight's and Atroce's stats [Playtester]
09/10
	* Corrected Kamaitachi's range to be 9, and the path range to be 4+SkillLv
	  [Skotlex]
	* Fixed Garm's and Bacsojin's skills being cancelable [Playtester]
	* Fixed Asura Strike autocast being self targetted [Playtester]
09/09
	* Fixed size of NPC_EVILLAND [Playtester]
	* Updated some cards to use the new format of bonus3 bAddEff* [Skotlex]
	* Commented unimplemented mob skills [Playtester]
	* Added Cursed Abbey mob skills thanks to Doddler [Playtester]
	- also fixed level of MVP heal which was once again 10 instead of 11
09/08
	* Updated item_db, mob_db and skill_cast_db [Playtester]
	- updated prices of new etc drops (guessed values)
	- updated Cursed Abbey mob drops
	- fixed db name of Thanatos
	- fixed cast time of Rebirth Spirit
09/07
	* Rev. 1113 Added more items; mostly rental. New pet tames, eggs. [L0ne_W0lf]
	- Updated and corrected some item names, both kRO and iRO names.
	- Skill need correct view-ids for new headgears.
	* Added new pets: Green Maiden, spring Rabbit, Goblins 1, 2 and 4,
	  Deleter, Diabolic, and Wanderer. The data is mostly custom.