@@ -3,6 +3,17 @@ Date	Added
 AS OF SVN REV. 5091, WE ARE NOW USING TRUNK.  ALL UNTESTED BUGFIXES/FEATURES GO INTO TRUNK.
 IF YOU HAVE A WORKING AND TESTED BUGFIX PUT IT INTO STABLE AS WELL AS TRUNK.
 
+2007/09/14
+	* Some changes brought up by AuronX (see topics 160295 and 149176):
+	* Gravitional Field is now a MISC type of attack.
+	* Magic reflection now effectively switches the caster/target (after damage
+	  has been calculated). Moved magic return and Magic Mirror code together
+	  with Kaite.
+	* Now when GTB completely blocks a spell, the spell animation will still
+	  come off, but with a single bolt and MISS damage.
+	* Removed hom_setting&0x2 since Homunculus can be hit by land spells.
+	* Monster Property now gives a Skill Failed message when attempted on
+	  players.
 2007/09/13
 	* Corrected SG Miracle to trigger per attack, not per walked tile. Trigger
 	  rate is now 0.02%
